--- a/.htaccess
+++ b/.htaccess
@@ -16,8 +16,14 @@ RewriteRule ^ - [L]
 # Otherwise, serve index.html for SPA routing
 RewriteRule ^ index.html [L]
 
-# Enable compression
+# Enable compression (Brotli first, then Deflate as fallback)
+<IfModule mod_brotli.c>
+    # Brotli compression (bättre än gzip)
+    AddOutputFilterByType BROTLI_COMPRESS text/html text/plain text/xml text/css text/javascript application/javascript application/json application/xml application/rss+xml application/xhtml+xml
+</IfModule>
+
 <IfModule mod_deflate.c>
+    # Deflate compression (fallback om Brotli inte finns)
     # Compress HTML, CSS, JavaScript, Text, XML and fonts
     AddOutputFilterByType DEFLATE application/javascript
     AddOutputFilterByType DEFLATE application/json
@@ -41,6 +47,11 @@ RewriteRule ^ index.html [L]
     AddOutputFilterByType DEFLATE text/javascript
     AddOutputFilterByType DEFLATE text/plain
     AddOutputFilterByType DEFLATE text/xml
+    
+    # Force compression for certain file types
+    <FilesMatch "\.(js|css|html|htm|php|txt|xml|json|rss|svg)$">
+        SetOutputFilter DEFLATE
+    </FilesMatch>
 </IfModule>
 
 # Cache static assets
