--- a/.htaccess
+++ b/.htaccess
@@ -47,7 +47,7 @@ RewriteRule ^ index.html [L]
     AddOutputFilterByType DEFLATE text/javascript
     AddOutputFilterByType DEFLATE text/plain
     AddOutputFilterByType DEFLATE text/xml
-    
+
     # Force compression for certain file types
     <FilesMatch "\.(js|css|html|htm|php|txt|xml|json|rss|svg)$">
         SetOutputFilter DEFLATE
@@ -56,14 +56,26 @@ RewriteRule ^ index.html [L]
 
 # Cache static assets
 <IfModule mod_headers.c>
+    # JavaScript och CSS - lång cache med immutable
     <FilesMatch "\.(css|js)$">
-        Header set Cache-Control "public, max-age=2592000, immutable"
+        Header set Cache-Control "public, max-age=31536000, immutable"
     </FilesMatch>
+    # JSON-filer - kortare cache
     <FilesMatch "\.(json)$">
         Header set Cache-Control "public, max-age=1800"
     </FilesMatch>
+    # Fonts - mycket lång cache
     <FilesMatch "\.(woff2|woff|ttf|otf)$">
         Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
+    # Images - lång cache
+    <FilesMatch "\.(jpg|jpeg|png|gif|webp|svg|ico)$">
+        Header set Cache-Control "public, max-age=2592000"
+    </FilesMatch>
+    # HTML - kort cache för att få uppdateringar
+    <FilesMatch "\.(html|htm)$">
+        Header set Cache-Control "public, max-age=3600, must-revalidate"
     </FilesMatch>
 </IfModule>
 
