--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
 RewriteEngine On
 RewriteBase /pag/
 
-# Exclude API and assets directories from SPA routing
+# Exclude API and assets directories from SPA routing (måste komma FÖRST)
 RewriteCond %{REQUEST_URI} ^/pag/(api|assets)/
 RewriteRule ^ - [L]
 
